--- a/tengtweets/templates/tweets/home.html
+++ b/tengtweets/templates/tweets/home.html
@@ -4,6 +4,9 @@
 <h3>Total Tweets</h3>
 {{ total_tweets }}
 
+<h3>Total ZH Tweets</h3>
+{{ total_tweets_zh }}
+
 <h3>Last Updates</h3>
 {{ last_updates|safe }}
 
