--- a/tengtweets/templates/tweets/search.html
+++ b/tengtweets/templates/tweets/search.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>Search Tweets</h1>
 
-<form action="{% url "tweets_search" %}" method="post">
+<form action="/tweets/search/" method="post">
     {% csrf_token %}
     <input type="text" name="q"/>
     <input type="submit"/>
